# Tiny-2048-Game

./: CMakeLists.txt  LICENSE  README.md
src/: 2048.cpp  2048.h  main.cpp
tests/: CMakeLists.txt  test_main.cpp  test_mergeBoard.cpp  test_moveBoard.cpp
